--- a/src/index.css
+++ b/src/index.css
@@ -59,7 +59,7 @@ h1 {
 }
 
 section {
-  margin-top: 8rem;
+  margin-top: 0rem;
 }
 
 section>h2,
@@ -76,6 +76,12 @@ section>h3 {
 section>h2 {
   color: var(--color-primary);
   margin-bottom: 3rem;
+}
+
+div>h1 {
+  text-align: center;
+  color: var(--color-primary);
+  margin-top: 1rem;
 }
 
 .text-light {
