--- a/src/components/contact/contact.css
+++ b/src/components/contact/contact.css
@@ -1,7 +1,11 @@
-.container.error {
-  color: red;
-  margin-bottom: 4em;
+.container {
+  margin-top: 2em;
+  margin-bottom: 2em;
   text-align: center;
+}
+
+.error {
+  color: red;
 }
 
 .portfolio__container {
